--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
       <div class="nav">
         <ul>
-            <li class="list">
+            <li class="list active">
                 <a href="#">
                     <span class="icon">
                         <ion-icon name="home-outline"></ion-icon>
@@ -49,9 +49,23 @@
                     <span class="text">Settings</span>
                 </a>
             </li>
+            <!-- indicator class -->
+            <div class="indicator"></div>
         </ul>
       </div>
-
+      
+      <script>
+         const list = document.querySelectorAll('.list');
+         function activeLink(){
+            list.forEach( (item) =>
+               item.classList.remove('active') 
+            );
+            this.classList.add('active');
+         }
+         list.forEach((item) => 
+          item.addEventListener('click', activeLink)
+         );
+      </script>
       <!-- ionicons script here-->
       <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
